style.css
@font-face{
    font-family: "Ajr-Regular";
    src: url("../fonts/Ajr-Regular copy.ttf") format('truetype');
  }

p{
    font-family: "Ajr-Regular", "Reenie Beanie";
    font-size: 10vw;
    width: 100%;
    height: 100%;
    margin: 0 auto;
    text-align: center;
}

img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
}

.happy{
    display: inline-block;
    width: 20%;
    margin-left: auto;
    margin-right: auto;
}

.pothole{
    display: inline-block;
    width: 15%;
    margin-left: auto;
    margin-right: auto;
}

.pub{
    display: inline-block;
    width: 5%;
    margin-left: auto;
    margin-right: auto;
}

div{
    text-align: center;
}

